Tue Nov 14 20:03:54 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-sh/sh2.c (__main): Define.

Mon Nov  6 14:39:18 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-empic/empic.exp: Accept a . in the address symbol.

	* ld-shared/shared.exp: Run tests on rs6000*-*-aix* and
	powerpc*-*-aix*.  Add code to create appropriate exports files,
	and pass appropriate compilation flags, and test against
	appropriate expected output.
	* ld-shared/xcoff.dat: New file.
	* ld-shared/main.c: Put #ifndef XCOFF_TEST around tests that can
	not be linked using XCOFF.  Use shlib_shlibvar1 as a sample
	function pointer, rather than shlib_mainvar.
	* ld-shared/sh1.c: Likewise.
	* ld-shared/shared.dat: Update for change from using shlib_mainvar
	to using shlib_shlibvar1.
	* ld-shared/sun4.dat: Likewise.

Sat Oct 28 01:54:25 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-scripts/script.t: Put .pr in .text, and .rw in .data, for
	convenience when testing XCOFF.

Thu Oct 26 22:53:17 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-bootstrap/bootstrap.exp: On AIX, pass -bI/lib/syscalls.exp
	along with --static.

	* ld-scripts/script.s: Make symbols global.

Fri Oct 20 12:22:16 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-undefined/undefined.exp: Add setup_xfails for arm*-*-pe*.

Fri Sep 29 11:06:10 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-undefined/undefined.exp: Use -e when invoking the linker, to
	prevent the SunOS linker from trying to create a shared library.

Thu Sep 28 12:37:14 1995  Ian Lance Taylor  <ian@cygnus.com>

	* ld-shared/shared.exp: Run the tests on sparc*-*-sunos4*.  Add
	appropriate modifications and setup_xfails.
	* ld-shared/sun4.dat: New file.

Mon Sep 18 14:12:56 1995  Ian Lance Taylor  <ian@cygnus.com>

	* lib/ld.exp (default_ld_version): Call prune_system_crud.
	(default_ld_relocate, default_ld_link): Likewise.
	(default_ld_simple_link, default_ld_compile): Likewise.
	(default_ld_assemble, default_ld_nm): Likewise.
