@@ -1,3 +1,14 @@
+Tue Nov 21 16:05:53 1995  Ian Lance Taylor  <ian@cygnus.com>
+
+	* ld-empic/empic.exp: Update for changes in objdump output.
+
+Wed Nov 15 17:42:48 1995  Ian Lance Taylor  <ian@cygnus.com>
+
+	* ld-srec/srec.exp: New tests.
+	* ld-srec/sr1.c, ld-srec/sr2.c, ld-srec/sr3.cc: New files.
+	* lib/ld.exp (ld_simple_link): Discard warnings about not being
+	able to find the entry symbol.
+
 Tue Nov 14 20:03:54 1995  Ian Lance Taylor  <ian@cygnus.com>
 
 	* ld-sh/sh2.c (__main): Define.
